--- a/04_contentprovider/src/main/res/values/styles.xml
+++ b/04_contentprovider/src/main/res/values/styles.xml
@@ -1,8 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <style name="AppTheme" parent="android:Theme.Holo">
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Base.Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
     </style>
-
 </resources>
