--- a/05_intent/src/main/res/menu/menu_main.xml
+++ b/05_intent/src/main/res/menu/menu_main.xml
@@ -1,6 +1,37 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".MainActivity">
+
+    <group android:id="@+id/menuGroup_Main">
+
+        <item android:id="@+id/menu_basic_view"
+            android:title="Invoke BasicView" />
+
+        <item android:id="@+id/menu_show_browser"
+            android:title="show browser" />
+
+        <item android:id="@+id/menu_search"
+            android:title="search" />
+
+        <item android:id="@+id/menu_dial"
+            android:title="dial" />
+
+        <item android:id="@+id/menu_call"
+            android:title="call" />
+
+        <item android:id="@+id/menu_map"
+            android:title="map" />
+
+        <item android:id="@+id/menu_testPick"
+            android:title="Test Pick" />
+
+        <item android:id="@+id/menu_testGetContent"
+            android:title="Test Get Content" />
+
+        <item android:id="@+id/menu_clear"
+            android:title="clear" />
+
+    </group>
+
 </menu>
